[package]
name = "lab-dbus-notification-server"
version = "0.1.0"
authors = ["LightDiscord <root@arnaud.sh>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
dbus = "*"
dbus-crossroads = "*"
dbus-tokio = "*"
futures = "*"
tokio = "*"
